more links for the link god

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Zano links</title>
     <meta charset="UTF-8" />
     <meta name="format-detection" content="telephone=no" />
     <!-- <style>body{opacity: 0;}</style> -->
-    <link rel="stylesheet" href="css/style.min.css?_v=20220609201854" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- <meta name="robots" content="noindex, nofollow"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,43 +27,127 @@
               <div class="header-profile__text">
                 Zano is the development of a scalable and secure coin, designed
                 for use in e-commerce. The technology behind our blockchain
-                provides reliability, security, and flexibility—a perfect option
-                for P2P transactions.
+                provides reliability, security, and flexibility — a perfect
+                option for P2P transactions.
               </div>
             </div>
             <div class="profile__items">
-              <a href="https://zano.org" class="profile__item item-profile">
+              <span>Socials:</span>
+              <a target="_blank" href="https://zano.org" class="item-profile">
                 <div class="item-profile__resource _icon-website">Website</div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a
+              <a target="_blank" href="" class="item-profile">
+                <div class="item-profile__resource _icon-website">Reddit</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a target="_blank" href="" class="item-profile">
+                <div class="item-profile__resource _icon-youtube">YouTube</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a target="_blank" href="" class="item-profile">
+                <div class="item-profile__resource _icon-website">Odysee</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a target="_blank" href="" class="item-profile">
+                <div class="item-profile__resource _icon-telegram">
+                  Telegram user community
+                </div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a target="_blank" href="" class="item-profile">
+                <div class="item-profile__resource _icon-telegram">
+                  Telegram announcements channel
+                </div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a target="_blank" href="" class="item-profile">
+                <div class="item-profile__resource _icon-website">Blog</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <div
+                class="profile__buttons buttons-profile buttons-profile_full-width"
+              >
+                <a
+                  target="_blank"
+                  href=""
+                  class="buttons-profile__button _icon-twitter-big"
+                ></a>
+                <a
+                  target="_blank"
+                  href=""
+                  class="buttons-profile__button _icon-discord-big"
+                ></a>
+              </div>
+              <span>Get Involved:</span>
+              <div class="profile__buttons buttons-profile">
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Bounties</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Crew3 page</a
+                >
+              </div>
+              <span>Downloads:</span>
+              <div class="profile__buttons buttons-profile">
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Mobile wallet</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Desktop wallet</a
+                >
+              </div>
+
+              <span>Global Communities:</span>
+              <div class="profile__buttons buttons-profile">
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Russian</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Chinese</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Spanish</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >French</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Turkish</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Japanese</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >German</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Dutch</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Korean</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button _text"
+                  >Arabic</a
+                >
+                <a target="_blank" href="" class="buttons-profile__button buttons-profile__button_small _text"
+                  >Portuguese</a
+                >
+              </div>
+              <!-- <a target="_blank"
                 href="https://github.com/hyle-team/zano"
-                class="profile__item item-profile"
+                class="item-profile"
               >
                 <div class="item-profile__resource _icon-website">Github</div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a
+              <a target="_blank"
                 href="https://docs.zano.org"
-                class="profile__item item-profile"
+                class="item-profile"
               >
                 <div class="item-profile__resource _icon-website">Docs</div>
                 <div class="item-profile__arrow"></div>
-              </a>
-            </div>
-            <div class="profile__buttons buttons-profile">
-              <a
-                href="https://twitter.com/zano_project"
-                class="buttons-profile__button _icon-twitter-big"
-              ></a>
-              <a
-                href="https://discord.gg/cGATjjGssE"
-                class="buttons-profile__button _icon-discord-big"
-              ></a>
-              <a
-                href="https://t.me/zanocoin"
-                class="buttons-profile__button _icon-telegram-big"
-              ></a>
+              </a> -->
             </div>
           </div>
         </div>
