--- a/index.html
+++ b/index.html
@@ -37,31 +37,51 @@
                 <div class="item-profile__resource _icon-website">Website</div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a target="_blank" href="" class="item-profile">
+              <a
+                target="_blank"
+                href="https://www.reddit.com/r/Zano/"
+                class="item-profile"
+              >
                 <div class="item-profile__resource _icon-website">Reddit</div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a target="_blank" href="" class="item-profile">
+              <a
+                target="_blank"
+                href="https://www.youtube.com/@zanoproject"
+                class="item-profile"
+              >
                 <div class="item-profile__resource _icon-youtube">YouTube</div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a target="_blank" href="" class="item-profile">
+              <!-- <a target="_blank" href="" class="item-profile">
                 <div class="item-profile__resource _icon-website">Odysee</div>
                 <div class="item-profile__arrow"></div>
-              </a>
-              <a target="_blank" href="" class="item-profile">
+              </a> -->
+              <a
+                target="_blank"
+                href="https://t.me/zanocoin"
+                class="item-profile"
+              >
                 <div class="item-profile__resource _icon-telegram">
                   Telegram user community
                 </div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a target="_blank" href="" class="item-profile">
+              <a
+                target="_blank"
+                href="https://t.me/Zano_News"
+                class="item-profile"
+              >
                 <div class="item-profile__resource _icon-telegram">
                   Telegram announcements channel
                 </div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a target="_blank" href="" class="item-profile">
+              <a
+                target="_blank"
+                href="https://blog.zano.org"
+                class="item-profile"
+              >
                 <div class="item-profile__resource _icon-website">Blog</div>
                 <div class="item-profile__arrow"></div>
               </a>
@@ -70,35 +90,47 @@
               >
                 <a
                   target="_blank"
-                  href=""
+                  href="https://twitter.com/zano_project"
                   class="buttons-profile__button _icon-twitter-big"
                 ></a>
                 <a
                   target="_blank"
-                  href=""
+                  href="https://discord.com/invite/wE3rmYY"
                   class="buttons-profile__button _icon-discord-big"
                 ></a>
               </div>
               <span>Get Involved:</span>
               <div class="profile__buttons buttons-profile">
-                <a target="_blank" href="" class="buttons-profile__button _text"
+                <a
+                  target="_blank"
+                  href="https://discord.com/channels/538361472691077130/991044706739843132"
+                  class="buttons-profile__button _text"
                   >Bounties</a
                 >
-                <a target="_blank" href="" class="buttons-profile__button _text"
+                <a
+                  target="_blank"
+                  href="https://crew3.xyz/c/zano/questboard"
+                  class="buttons-profile__button _text"
                   >Crew3 page</a
                 >
               </div>
               <span>Downloads:</span>
               <div class="profile__buttons buttons-profile">
-                <a target="_blank" href="" class="buttons-profile__button _text"
+                <a
+                  target="_blank"
+                  href="https://zano.org/downloads"
+                  class="buttons-profile__button _text"
                   >Mobile wallet</a
                 >
-                <a target="_blank" href="" class="buttons-profile__button _text"
+                <a
+                  target="_blank"
+                  href="https://zano.org/downloads"
+                  class="buttons-profile__button _text"
                   >Desktop wallet</a
                 >
               </div>
 
-              <span>Global Communities:</span>
+              <!-- <span>Global Communities:</span>
               <div class="profile__buttons buttons-profile">
                 <a target="_blank" href="" class="buttons-profile__button _text"
                   >Russian</a
@@ -133,7 +165,7 @@
                 <a target="_blank" href="" class="buttons-profile__button buttons-profile__button_small _text"
                   >Portuguese</a
                 >
-              </div>
+              </div> -->
               <!-- <a target="_blank"
                 href="https://github.com/hyle-team/zano"
                 class="item-profile"
