--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
               </div>
             </div>
             <div class="profile__items">
-              <span>Socials:</span>
+              <span>Links:</span>
               <a target="_blank" href="https://zano.org" class="item-profile">
                 <div class="item-profile__resource _icon-website">Website</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a
+                target="_blank"
+                href="https://github.com/hyle-team/zanog"
+                class="item-profile"
+              >
+                <div class="item-profile__resource _icon-website">Github</div>
                 <div class="item-profile__arrow"></div>
               </a>
               <a
