--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </a>
               <a
                 target="_blank"
-                href="https://github.com/hyle-team/zanog"
+                href="https://github.com/hyle-team/zano"
                 class="item-profile"
               >
                 <div class="item-profile__resource _icon-website">Github</div>
