--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
               </a>
               <a
                 target="_blank"
+                href="https://docs.zano.org/"
+                class="item-profile"
+              >
+                <div class="item-profile__resource _icon-website">Docs</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a
+                target="_blank"
                 href="https://github.com/hyle-team/zano"
                 class="item-profile"
               >
