added exchanges links
Signed-off-by: PRavaga <trueravaga@gmail.com>

--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
                   >Desktop wallet</a
                 >
               </div>
+              <span>Exchanges:</span>
+              <div class="profile__buttons buttons-profile">
+                <a
+                  target="_blank"
+                  href="https://tradeogre.com/exchange/BTC-ZANO"
+                  class="buttons-profile__button _text"
+                  >Trade Ogre</a
+                >
+                <a
+                  target="_blank"
+                  href="https://app.stex.com/en/trading/pair/BTC/ZANO/1D"
+                  class="buttons-profile__button _text"
+                  >STEX</a
+                >
+              </div>
 
               <!-- <span>Global Communities:</span>
               <div class="profile__buttons buttons-profile">
