exchange link update
Signed-off-by: PRavaga <trueravaga@gmail.com>

--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
               <div class="profile__buttons buttons-profile">
                 <a
                   target="_blank"
-                  href="https://tradeogre.com/exchange/BTC-ZANO"
+                  href="https://www.coinex.com/exchange/zano-usdt"
                   class="buttons-profile__button _text"
-                  >Trade Ogre</a
+                  >CoinEx</a
                 >
                 <a
                   target="_blank"
-                  href="https://app.stex.com/en/trading/pair/BTC/ZANO/1D"
+                  href="https://tradeogre.com/exchange/ZANO-BTC"
                   class="buttons-profile__button _text"
-                  >STEX</a
+                  >Trade Ogre</a
                 >
               </div>
 
