cmc and coingecko links
Signed-off-by: PRavaga <trueravaga@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
               </a>
               <a
                 target="_blank"
+                href="https://blog.zano.org"
+                class="item-profile"
+              >
+                <div class="item-profile__resource _icon-website">Blog</div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a
+                target="_blank"
                 href="https://docs.zano.org/"
                 class="item-profile"
               >
@@ -93,14 +101,6 @@
                 </div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <a
-                target="_blank"
-                href="https://blog.zano.org"
-                class="item-profile"
-              >
-                <div class="item-profile__resource _icon-website">Blog</div>
-                <div class="item-profile__arrow"></div>
-              </a>
               <div
                 class="profile__buttons buttons-profile buttons-profile_full-width"
               >
@@ -115,6 +115,26 @@
                   class="buttons-profile__button _icon-discord-big"
                 ></a>
               </div>
+              <a
+                target="_blank"
+                href="https://coinmarketcap.com/currencies/zano"
+                class="item-profile"
+              >
+                <div class="item-profile__resource _icon-website">
+                  Coinmarketcap
+                </div>
+                <div class="item-profile__arrow"></div>
+              </a>
+              <a
+                target="_blank"
+                href="https://www.coingecko.com/en/coins/zano"
+                class="item-profile"
+              >
+                <div class="item-profile__resource _icon-website">
+                  Coingecko
+                </div>
+                <div class="item-profile__arrow"></div>
+              </a>
               <span>Get Involved:</span>
               <div class="profile__buttons buttons-profile">
                 <a
