--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
               </div>
               <h1 class="header-profile__title">Zano links</h1>
               <div class="header-profile__text">
-                Zano is the development of a scalable and secure coin, designed
-                for use in e-commerce. The technology behind our blockchain
-                provides reliability, security, and flexibility — a perfect
-                option for P2P transactions.
+                Push the frontiers of digital privacy. Join the Zano ecosystem
+                today.
               </div>
             </div>
             <div class="profile__items">
