--- a/index.html
+++ b/index.html
@@ -142,11 +142,12 @@
                   >Bounties</a
                 >
                 <a
-                  target="_blank"
-                  href="https://crew3.xyz/c/zano/questboard"
-                  class="buttons-profile__button _text"
-                  >Crew3 page</a
-                >
+                target="_blank"
+                href="https://t.me/zanomarketing"
+                class="buttons-profile__button _text"
+                >Community Marketing</a
+              >
+
               </div>
               <span>Downloads:</span>
               <div class="profile__buttons buttons-profile">
@@ -173,12 +174,23 @@
                 >
                 <a
                   target="_blank"
-                  href="https://tradeogre.com/exchange/ZANO-BTC"
+                  href="https://tradeogre.com/exchange/ZANO-USDT"
                   class="buttons-profile__button _text"
-                  >Trade Ogre</a
+                  >TradeOgre</a
                 >
+                <a
+                target="_blank"
+                href="https://xeggex.com/market/ZANO_USDT"
+                class="buttons-profile__button _text"
+                >XeggeX</a
+              >
+              <a
+              target="_blank"
+              href="https://nonkyc.io/market/ZANO_USDT"
+              class="buttons-profile__button _text"
+              >NonKYC</a
+            >
               </div>
-
               <!-- <span>Global Communities:</span>
               <div class="profile__buttons buttons-profile">
                 <a target="_blank" href="" class="buttons-profile__button _text"
