--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <div class="profile__container">
             <div class="profile__header header-profile">
               <div class="header-profile__logo-ibg">
-                <picture
-                  ><source srcset="img/logos/icon.png" type="image/webp" />
-                  <img src="img/logos/icon.png" alt=""
-                /></picture>
+                <picture>
+                  <source srcset="img/logos/icon.png" type="image/webp" />
+                  <img src="img/logos/icon.png" alt="" />
+                </picture>
               </div>
               <h1 class="header-profile__title">Zano links</h1>
               <div class="header-profile__text">
@@ -75,42 +75,38 @@
                 <div class="item-profile__resource _icon-youtube">YouTube</div>
                 <div class="item-profile__arrow"></div>
               </a>
-              <!-- <a target="_blank" href="" class="item-profile">
-                <div class="item-profile__resource _icon-website">Odysee</div>
-                <div class="item-profile__arrow"></div>
-              </a> -->
-              <a
-                target="_blank"
-                href="https://t.me/zanocoin"
-                class="item-profile"
-              >
-                <div class="item-profile__resource _icon-telegram">
-                  Telegram user community
-                </div>
-                <div class="item-profile__arrow"></div>
-              </a>
-              <a
-                target="_blank"
-                href="https://t.me/Zano_News"
-                class="item-profile"
-              >
-                <div class="item-profile__resource _icon-telegram">
-                  Telegram announcements channel
-                </div>
-                <div class="item-profile__arrow"></div>
-              </a>
               <div
                 class="profile__buttons buttons-profile buttons-profile_full-width"
               >
                 <a
                   target="_blank"
                   href="https://twitter.com/zano_project"
-                  class="buttons-profile__button _icon-twitter-big"
-                ></a>
+                  class="buttons-profile__button"
+                  style="background: rgb(29, 155, 240)"
+                >
+                  <div class="buttons-profile__button-icon">
+                    <svg
+                      width="1em"
+                      height="1em"
+                      viewBox="0 0 18 16"
+                      fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M14.1761 0H16.9362L10.9061 6.77744L18 16H12.4456L8.09512 10.4066L3.11723 16H0.355444L6.80517 8.75077L0 0H5.69545L9.62787 5.11262L14.1761 0ZM13.2073 14.3754H14.7368L4.86441 1.53928H3.2232L13.2073 14.3754Z"
+                      />
+                    </svg>
+                  </div>
+                </a>
                 <a
                   target="_blank"
                   href="https://discord.com/invite/wE3rmYY"
                   class="buttons-profile__button _icon-discord-big"
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://t.me/zanocoin"
+                  class="buttons-profile__button _icon-telegram-big"
                 ></a>
               </div>
               <a
@@ -141,12 +137,9 @@
                   class="buttons-profile__button _text"
                   >Bounties</a
                 >
-                <a
-                  target="_blank"
-                  href="https://crew3.xyz/c/zano/questboard"
-                  class="buttons-profile__button _text"
-                  >Crew3 page</a
-                >
+                <!-- <a target="_blank" href="https://t.me/zanomarketing" class="buttons-profile__button _text">
+                Community Marketing
+              </a> -->
               </div>
               <span>Downloads:</span>
               <div class="profile__buttons buttons-profile">
@@ -167,18 +160,35 @@
               <div class="profile__buttons buttons-profile">
                 <a
                   target="_blank"
+                  href="https://xeggex.com/market/ZANO_USDT"
+                  class="buttons-profile__button _text"
+                  >MEXC</a
+                >
+                <a
+                  target="_blank"
                   href="https://www.coinex.com/exchange/zano-usdt"
                   class="buttons-profile__button _text"
                   >CoinEx</a
                 >
                 <a
                   target="_blank"
-                  href="https://tradeogre.com/exchange/ZANO-BTC"
+                  href="https://tradeogre.com/exchange/ZANO-USDT"
                   class="buttons-profile__button _text"
-                  >Trade Ogre</a
+                  >TradeOgre</a
                 >
+                <a
+                  target="_blank"
+                  href="https://xeggex.com/market/ZANO_USDT"
+                  class="buttons-profile__button _text"
+                  >XeggeX</a
+                >
+                <!-- <a
+              target="_blank"
+              href="https://nonkyc.io/market/ZANO_USDT"
+              class="buttons-profile__button _text"
+              >NonKYC</a
+            > -->
               </div>
-
               <!-- <span>Global Communities:</span>
               <div class="profile__buttons buttons-profile">
                 <a target="_blank" href="" class="buttons-profile__button _text"
@@ -229,6 +239,16 @@
                 <div class="item-profile__resource _icon-website">Docs</div>
                 <div class="item-profile__arrow"></div>
               </a> -->
+              <span>Research:</span>
+              <div class="profile__buttons buttons-profile">
+                <a
+                  target="_blank"
+                  href="https://docs.zano.org/docs/learn/whitepaper/"
+                  class="buttons-profile__button _text"
+                >
+                  Research papers
+                </a>
+              </div>
             </div>
           </div>
         </div>
